# cli

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
app/: CMakeLists.txt  main.c
cli_lib/: CMakeLists.txt  cli_parser.c  cli_parser.h
tests/: CMakeLists.txt  cli_parser_test.c  cli_parser_test.h
